<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RM2091Activity" >

    <RadioGroup
        android:id="@+id/rgdev1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" >

        <RadioButton
            android:id="@+id/msrdev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"
            android:text="@string/msr_device"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/pcscdev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/pcsc_device"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/rfiddev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/rfid_device"
            android:textSize="25sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/fm1_ok"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/fm1_ok"
            android:textSize="25sp" />

        <Button
            android:id="@+id/fm1_cancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/fm1_cancel"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>