<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:text="@string/enter_string"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/asciiMsrEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dip"
        android:singleLine="true"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dip" >

        <Button
            android:id="@+id/asciiOkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/ok"
            android:textSize="14sp" />

        <Button
            android:id="@+id/asciiCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/cancel"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>