<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dip"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/selectedResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:textSize="14sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/codeListview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@null"
        android:orientation="vertical" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dip" >

        <Button
            android:id="@+id/codeOkBtn"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/ok"
            android:textSize="20sp" />

        <Button
            android:id="@+id/backDeleteBtn"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/backspace"
            android:textSize="20sp" />

        <Button
            android:id="@+id/codeCancelBtn"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/cancel"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>